--- a/Client/src/component/Skill/Skill.css
+++ b/Client/src/component/Skill/Skill.css
@@ -1,12 +1,13 @@
 /* src/Skill.css */
-
-.slider-container {
+.skill-container {
+  display: flex;
+}
+.slider-content {
   margin-bottom: 200px;
-  width: 80%;
-  height: 40vh;
-  max-width: 50vw;
-  margin: 0 auto;
+  width: 400px;
   padding: 20px;
+  height: fit-content;
+  padding-bottom: 50px;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -15,8 +16,8 @@
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.slider-container h1 {
-  color: aqua;
+.slider-content h1 {
+  color:#37fdc2;
 }
 
 .slide {
@@ -35,9 +36,20 @@
   justify-content: center;
 }
 
+  .icon-title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+  }
+
+  .icon-title h3 {
+    padding-bottom: 10px;
+  }
+
 .skill-icon {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   margin-bottom: 10px;
 }
 
@@ -120,10 +132,10 @@
 }
 
 @media (max-width: 500px) {
-  .slider-container {
+  .slider-content {
     max-width: 200px;
   }
-  .slider-container h1 {
+  .slider-content h1 {
     font-size: 1.2rem;
   }
 
