--- a/Client/src/component/Testimonals/ShowMore/ShowMore.css
+++ b/Client/src/component/Testimonals/ShowMore/ShowMore.css
@@ -206,8 +206,9 @@
   }
 
   .user-icons img {
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
+    padding-right: 40px;
   }
 
   .show-more-actions img {
@@ -356,3 +357,4 @@
 .opacity {
   opacity: 0.4;
 }
+
