backend to add and fetch feature is added

--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -9,7 +9,7 @@
 
 body {
   background-color: #0a192f;
-  width: 80%;
+  /* width: 80%; */
   margin: 0 auto;
   color: white;
   scroll-behavior: smooth;
